--- a/app/integration/bom/pom.xml
+++ b/app/integration/bom/pom.xml
@@ -28,7 +28,7 @@
 
   <properties>
     <spring-boot.version>1.5.13.RELEASE</spring-boot.version>
-    <camel.version>2.21.0.fuse-730054</camel.version>
+    <camel.version>2.23.1</camel.version>
     <atlasmap.version>1.39.5</atlasmap.version>
   </properties>
 
@@ -324,6 +324,11 @@
       <dependency>
         <groupId>io.syndesis.connector</groupId>
         <artifactId>connector-odata</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.syndesis.connector</groupId>
+        <artifactId>connector-knative</artifactId>
         <version>${project.version}</version>
       </dependency>
     </dependencies>
